# crn-utils

./: CLAUDE.md  LICENSE  README.md  crn-util.yml  edwards_spatial_geomx_th.ipynb  hafler_mouse1.ipynb  hafler_sc_pmdbs.ipynb  hardy_bulk_pmdbs.ipynb  hardy_sc_pmdbs.ipynb  jakobsson_sc_pmdbs.ipynb  lee_bulk_pmdbs.ipynb  lee_sc_pmdbs.ipynb  meta_clean.ipynb  pyproject.toml  scherzer_hybsel.ipynb  scherzer_sc_pmdbs.ipynb  sulzer_sc_pmdbs.ipynb  vila_spatia_geomx_thlc.ipynb  voet_sc_pmdbs.ipynb
resource/CDE/: ASAP_CDE_final.csv  ASAP_CDE_v1.csv  ASAP_CDE_v2.1.csv  ASAP_CDE_v2.csv  ASAP_CDE_v3.0-beta.csv  ASAP_CDE_v3.0.csv  ASAP_CDE_v3.0_ASAP_assigned_keys.csv  ASAP_CDE_v3.1.csv  ASAP_CDE_v3.1_ASAP_assigned_keys.csv  ASAP_CDE_v3.2.csv  ASAP_CDE_v3.3.csv
resource/CDE/old/: ASAP_CDE_v3.0-beta.csv  ASAP_CDE_v3.0.csv  ASAP_CDE_v3.1 copy.csv  (+1 more)
resource/v1/: SAMPLE.csv  STUDY.csv
resource/v2.1/: CLINPATH.csv  DATA.csv  SAMPLE.csv  STUDY.csv  SUBJECT.csv
src/crn_utils/: __init__.py  asap_ids.py  bucket_util.py  checksums.py  constants.py  doi.py  examples.ipynb  file_metadata.py  google_spreadsheets.py  orphans.py  proteomics.py  release_util.py  release_utils_refactor.py  resource_tools.py  summary_stats.py  update_schema.py  util.py  validate.py  validate2.py  validate3.py  zenodo_util.py
src/deprecating/: _resource_tools.py  orphans.py  release_util_deprecating.py
test_scripts/: examples.ipynb  lee_bulk_pmdbs.ipynb  scherzer_hybsel.ipynb  sulzer_sc_pmdbs.ipynb  test_cde.py  test_file_metadata.py  vila_spatia_geomx_thlc.ipynb  voet_sc_pmdbs.ipynb  wood_bulk_pmdbs.ipynb
(+3 files in other folders)
