// Purpose: Configuration file for the project
// Creator: Andy Henrie
// Created: 2025-02-01
// Last Updated: 2025-03-18


[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name =  "crn-utils"
version = "0.1.0-beta"
authors = [
    {name = "Andy Henrie", email = "ergonyc@gmail.com"},
]
description = "Collection of tools and utilities for ASAP CRN Cloud Datasets"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
license = {text = "MIT"}


[project.urls]
Documentation = "https://github.com/ASAP-CRN/crn-utils#readme"
Source = "https://github.com/ASAP-CRN/crn-utils"
Tracker = "https://github.com/ASAP-CRN/crn-utils"


[tool.setuptools.packages.find]
where = ["src"]

